feat: create responsive navbar with media queries

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-Wallet</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <div class="menu">
+                <a href="#Home" class="btn">Home</a>
+                <a href="#About" class="btn">About</a>
+                <a href="#Contact" class="btn">Contact</a>
+                <a href="#Portfolio" class="btn">Portfolio</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
