--- a/index.html
+++ b/index.html
@@ -1,22 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <title>Moby-Dick; or The Whale</title>
+    <meta name="Moby-Dick" content="Read Moby-Dick online for free">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Wallet</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="menu">
                 <a href="#Home" class="btn">Home</a>
+                <a href="#Chapter" class="btn">Chapter</a>
                 <a href="#About" class="btn">About</a>
-                <a href="#Contact" class="btn">Contact</a>
-                <a href="#Portfolio" class="btn">Portfolio</a>
+                <a href="#Contact" class="btn">Glossary</a>
             </div>
         </nav>
     </header>
+    <div class="cover">
+        <h1>MOBY-DICK;</h1>
+        <h1>or THE WHALE</h1>
+        <h1><a href="./pages/about.html" target="_blank">by Herman Melville</a></h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Moby_Dick_p510_illustration.jpg/250px-Moby_Dick_p510_illustration.jpg" alt="Moby-Dick">     
+        <h2 class="chapter-title">1. Loomings</h2>
+    </div>
+    <div class="content">
+        <p>
+            Call me <a href="./pages/ishmael.html"><strong>Ishmael.</strong></a> Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world.
+        </p>
+        <p>
+            It is a way I have of <a href="./pages/driving_off_the_spleen.html"><u>driving off the spleen</u></a> and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, <em>drizzly November in my soul</em>; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my <a href="./pages/hypo.html"><span class="hypo">hypo</span></a> gets such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball.
+        </p>
+        <p>
+            With a philosophical flourish <a href="./pages/cato.html"><span class="cato">Cato</span></a> throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some <a href="./pages/time.html">time</a> or other, cherish very nearly the same <a href="./pages/feelings.html"><em>feelings</em></a> towards the ocean with me.
+        </p>
+        <p>
+            There now is your insular city of the Manhattoes, belted round by wharves as Indian isles by coral reefs—commerce surrounds it with her surf. Right and left, the streets take you waterward. Its extreme downtown is the battery, where that noble mole is washed by waves, and cooled by breezes which a few hours previous were out of sight of land. Look at the crowds of water-gazers there.
+        </p>
+        <p>
+            Circumambulate the city of a dreamy Sabbath afternoon. Go from Corlears Hook to Coenties Slip, and from thence, by Whitehall, northward. What do you see?—Posted like silent sentinels all around the town, stand thousands upon thousands of mortal men fixed in ocean reveries.
+        </p>
+        <p>
+            Some leaning against the spiles; some seated upon the pier-heads; some looking over the bulwarks of ships from China; some high aloft in the rigging, as if striving to get a still better seaward peep. But these are all landsmen; of week days pent up in lath and plaster—tied to counters, nailed to benches, clinched to desks.
+        </p>
+        <p>
+            How then is this? Are the green fields gone? What do they here? But look! here come more crowds, pacing straight for the water, and seemingly bound for a dive. Strange! Nothing will content them but the extremest limit of the land; loitering under the shady lee of yonder warehouses will not suffice. No. They must get just as nigh the water as they possibly can without falling in. And there they stand—miles of them—leagues. Inlanders all, they come from lanes and alleys, streets and avenues—north, east, south, and west. Yet here they all unite.
+        </p>
+    </div>
+    <a class="whatsapp-float" href="https://wa.me/6282133757091" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
+        <span class="whatsapp-text">WhatsApp Me!</span>
+    </a>
 </body>
 </html>
+
+
+
+    
