refactor: update About page to give information about the author

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="menu">
                 <a href="#Home" class="btn">Home</a>
                 <a href="#Chapter" class="btn">Chapter</a>
-                <a href="#About" class="btn">About</a>
+                <a href="./pages/about.html" target="_blank" class="btn">About</a>
                 <a href="#Contact" class="btn">Glossary</a>
             </div>
         </nav>
