feat: create hamburger menu interaction for mobile layout with dom

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="menu">
+            <div class="menu" id="navMenu">
                 <a href="#Home" class="btn">Home</a>
                 <a href="#Chapter" class="btn">Chapter</a>
                 <a href="./pages/about.html" target="_blank" class="btn">About</a>
                 <a href="#Contact" class="btn">Glossary</a>
             </div>
+            <img class="hamburger" src="src/hamburger.svg" alt="icon hamburger" id="hamburger">
         </nav>
     </header>
     <div class="cover">
@@ -32,7 +33,7 @@
             Call me <a href="./pages/ishmael.html"><strong>Ishmael.</strong></a> Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world.
         </p>
         <p>
-            It is a way I have of <a href="./pages/driving_off_the_spleen.html"><u>driving off the spleen</u></a> and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, <em>drizzly November in my soul</em>; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my <a href="./pages/hypo.html"><span class="hypo">hypo</span></a> gets such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball.
+            It is a way I have of <a href="./pages/driving_off_the_spleen.html"><u>driving off the_spleen</u></a> and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, <em>drizzly November in my soul</em>; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my <a href="./pages/hypo.html"><span class="hypo">hypo</span></a> gets such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball.
         </p>
         <p>
             With a philosophical flourish <a href="./pages/cato.html"><span class="cato">Cato</span></a> throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some <a href="./pages/time.html">time</a> or other, cherish very nearly the same <a href="./pages/feelings.html"><em>feelings</em></a> towards the ocean with me.
@@ -54,9 +55,6 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
         <span class="whatsapp-text">WhatsApp Me!</span>
     </a>
+    <script src="script.js"></script>
 </body>
 </html>
-
-
-
-    
